<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profilephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/secondary_text"
        android:drawableRight="@drawable/ic_baseline_add_a_photo_24"
        android:text="@string/addphoto"
        app:backgroundTint="@color/secondary_text"/>

    <EditText
        android:id="@+id/profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/secondary_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reviewphoto"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/secondary_text"
        android:drawableBottom="@drawable/ic_baseline_add_a_photo_24"
        android:text="@string/addphoto"
        app:backgroundTint="@color/secondary_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/review"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/secondary_text"
        android:drawableBottom="@drawable/ic_baseline_reviews_24"
        android:onClick="Hey"
        android:text="@string/addreview"
        app:backgroundTint="@color/secondary_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkin"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/secondary_text"
        android:drawableBottom="@drawable/ic_baseline_reviews_24"
        android:text="@string/addcheckin"
        app:backgroundTint="@color/secondary_text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reviewstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:text="@string/reviews"
        android:textColor="@color/primary_text"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reviewsnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/reviewstext"
        android:layout_marginTop="400dp"
        android:text="0"
        android:textSize="25sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/photostext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"
        android:text="@string/photos"
        android:textColor="@color/primary_text"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/photosnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/photostext"
        android:layout_marginTop="450dp"
        android:text="0"
        android:textSize="25sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/checkintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:text="@string/checkins"
        android:textColor="@color/primary_text"
        android:textSize="25sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/checkinsnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/checkintext"
        android:layout_marginTop="500dp"
        android:text="0"
        android:textSize="25sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/signout"
        app:backgroundTint="@color/secondary_text" />

</RelativeLayout>